vbnc/vbnc/tests/Errors/33104.vb
Class A
    Shared Sub Main()
        Dim o As Object = If()
    End Sub
End Class